force-app/main/default/objects/Job_Application__c/fields/Avaible_Positions__c.field-meta.xml
<CustomField>
    <fullName>Avaible_Positions__c</fullName>
    <formula>Job__r.Number_of_Avaible_Positions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avaible Positions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>