force-app/main/default/objects/Job_Application__c/fields/Candidate_Email__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Email__c</fullName>
    <formula>Candidate__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Email</label>
    <type>Text</type>
</CustomField>