force-app/main/default/objects/Job_Application__c/fields/Candidate_Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Years_of_Experience__c</fullName>
    <formula>Candidate__r.Candidate_Years_of_Exp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Years of Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>