force-app/main/default/objects/Job_Application__c/fields/Monthly_Salary__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Salary__c</fullName>
    <formula>Job__r.Salary__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>